# LegaLinkk

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_documents.py  002_add_extraction_fields.py  003_add_extraction_method.py  004_document_chunks_and_processed_status.py  005_pgvector_chunk_embeddings.py  006_conversations_messages.py  007_create_users.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  base_agent.py  intent.py  legal.py  orchestrator.py  placeholder.py  risk.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  celery_app.py  config.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/graphs/: __init__.py  graph_builder.py  ingestion_graph.py  rag_graph.py  retry.py
backend/app/models/: __init__.py  chunk.py  conversation.py  document.py  embedding.py  user.py
backend/app/ocr/: __init__.py  paddle_ocr.py  paddle_ocr_worker.py  subprocess_runner.py
backend/app/parsers/: __init__.py  extraction_pipeline.py  pdf_parser.py
backend/app/repositories/: chunk.py  conversation.py  document.py  embedding.py  retrieval.py  user.py  vector.py
backend/app/schemas/: agents.py  auth.py  chat.py  conversation.py  document.py  health.py  retrieval.py
backend/scripts/: probe_paddle_import.py  test_paddle_version.sh
backend/tests/: conftest.py  test_chunker.py  test_health.py
(+93 files in other folders)
