[tool.poetry]
name = "legallink-backend"
version = "0.1.0"
description = "LegalLink AI-powered legal document analysis platform — FastAPI backend"
authors = ["LegalLink Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.17"
aiofiles = "^24.1.0"
pymupdf = "^1.25.0"
numpy = "^2.0.0"
paddlepaddle = "^3.0.0"
paddleocr = "^2.9.1"
pgvector = "^0.3.6"
fastembed = "^0.6.0"
httpx = "^0.28.0"
langgraph = "^0.3.34"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
